<resources>
    <string name="app_name">RootBeer</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="mathematics_operation">Mathematics Operation</string>
    <string name="level">Level</string>
    <string name="start_game">Start Game</string>
</resources>